--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
                 <h4>Esto es mi titulo h4</h4>
                 <h5>Esto es mi titulo h5</h5>
                 <h6>Esto es mi titulo h6</h6>
+                <article>
+                    <h3>Parrafo 1</h3>
+                    <p>Esto es un parrafo</p>
+                    <h3>Parrafo 2</h3>
+                    <p>Esto es otro parrafo</p>
+                    <span>Esto es un texto corto</span>
+                </article>
 
             </section>
             <section>Tabla con la info</section>
