--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
                     <p>Esto es otro parrafo</p>
                     <span>Esto es un texto corto</span>
                 </article>
+                <img src= "./media/dalmatian-1020790_1280.jpg" alt= "foto de un dalmata" />
+                <!-- <img src= "url" alt= "foto de un dalmata" /> -->
 
             </section>
             <section>Tabla con la info</section>
