--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 <h4>Esto es mi titulo h4</h4>
                 <h5>Esto es mi titulo h5</h5>
                 <h6>Esto es mi titulo h6</h6>
+                <a href="https://www.google.com"> Esto es un link externo</a>
+                <a href="./paginatest.html"> Esto es un link interno </a>
                 <article>
                     <h3>Parrafo 1</h3>
                     <p>Esto es un parrafo</p>
