--- a/index.html
+++ b/index.html
@@ -10,7 +10,23 @@
     </head>
     <body>
         <heaader>
-            este es el header de navegacion </heaader>
+            <h3>Esto es una lista ordenada</h3>
+            <ol>
+                <li>Elemento 1</li>
+                <li>Elemento 2</li>
+                <li>Elemento 3</li>
+                <li>Elemento 4</li>
+                <li>Elemento 5</li>
+            </ol>
+            <ul>
+                <li>Elemento 1</li>
+                <li>Elemento 2</li>
+                <li>Elemento 3</li>
+                <li>Elemento 4</li>
+                <li>Elemento 5</li>
+            </ul>
+            <div>Hola esto es un div</div>
+        </heaader>
         <main> 
             <section>
                 <h1>Esto es mi titulo h1</h1>
@@ -21,6 +37,7 @@
                 <h6>Esto es mi titulo h6</h6>
                 <a href="https://www.google.com"> Esto es un link externo</a>
                 <a href="./paginatest.html"> Esto es un link interno </a>
+                <a href="./formulario.html">Este es un link al formulario</a>
                 <article>
                     <h3>Parrafo 1</h3>
                     <p>Esto es un parrafo</p>
