--- a/formulario.html
+++ b/formulario.html
@@ -5,6 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Formulario</title>
+        <style>
+        </style>
     </head>
     <body>
         <a href="./index.html">Regresar </a>
@@ -25,8 +27,8 @@
             <input type ="checkboss" />
             <input type ="radio" />
             <input type ="file" />
-            <button type ="submit">Enviar datos</button>
-            <button type = "reset">Reiniciar</button>
+            <button type ="submit" style="color: white; background-color: red">Enviar datos</button>
+            <button type = "reset" style="color: green;background-color: pink">Reiniciar</button>
         </form>
     </body>
 </html>
