--- a/formulario.html
+++ b/formulario.html
@@ -6,6 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Formulario</title>
         <style>
+            button{
+                background-color: red;
+                color: white;
+            }
         </style>
     </head>
     <body>
@@ -27,8 +31,12 @@
             <input type ="checkboss" />
             <input type ="radio" />
             <input type ="file" />
-            <button type ="submit" style="color: white; background-color: red">Enviar datos</button>
+            <button type ="submit" >Enviar datos</button>
+            <button type = "reset" >Reiniciar</button>
+            <!--
+                <button type ="submit" style="color: white; background-color: red">Enviar datos</button>
             <button type = "reset" style="color: green;background-color: pink">Reiniciar</button>
+              -->
         </form>
     </body>
 </html>
