--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="styles/estilos.css" rel="stylesheet" />
+
         <title>Hola este es el titulo</title>
         <description>Esta es la descripcion</description>
 
@@ -12,8 +14,8 @@
         <heaader>
             <h3>Esto es una lista ordenada</h3>
             <ol>
-                <li>Elemento 1</li>
-                <li>Elemento 2</li>
+                <li class="textoGris fondoRojo"> Elemento 1</li>
+                <li class="textoAzul fondoAmarillo"> Elemento 2</li>
                 <li>Elemento 3</li>
                 <li>Elemento 4</li>
                 <li>Elemento 5</li>
@@ -25,7 +27,7 @@
                 <li>Elemento 4</li>
                 <li>Elemento 5</li>
             </ul>
-            <div>Hola esto es un div</div>
+            <div class="textoGrandeNegrita">Hola esto es un div</div>
         </heaader>
         <main> 
             <section>
@@ -40,17 +42,55 @@
                 <a href="./formulario.html">Este es un link al formulario</a>
                 <article>
                     <h3>Parrafo 1</h3>
-                    <p>Esto es un parrafo</p>
+                    <p class="parrafoGris parrafoAngosto">
+                        Esto es un parrafo Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Velit, pariatur dolore fugit eveniet nemo itaque doloremque architecto nam enim!
+                        Asperiores odio eaque cum iusto mollitia facilis suscipit voluptate eum sapiente!
+                    </p>
                     <h3>Parrafo 2</h3>
-                    <p>Esto es otro parrafo</p>
+                    <p class="parrafoNegro">
+                        Esto es otro parrafo Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Eaque doloribus ratione hic architecto eos. Reprehenderit rem soluta voluptas odio 
+                        similique, cumque neque amet ipsam praesentium debitis nulla, sit optio pariatur.
+                    </p>
+                    <p class="parrafoGris">
+                        Esto es otro parrafo Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        Eaque doloribus ratione hic architecto eos. Reprehenderit rem soluta voluptas odio 
+                        similique, cumque neque amet ipsam praesentium debitis nulla, sit optio pariatur.
+                    </p>
+                    <h3>Parrafo 3</h3>
+                    <p id="parrafo3">
+                        Este es el tercer parrafo Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                        Quia doloremque exercitationem quaerat fugiat eius quasi ipsa. Omnis cum consequatur
+                        saepe earum maiores iste, debitis hic quam, nisi vero odit modi.
+                    </p>
+
                     <span>Esto es un texto corto</span>
                 </article>
-                <img src= "./media/dalmatian-1020790_1280.jpg" alt= "foto de un dalmata" />
+                <img class="imagenPequeña" src= "./media/dalmatian-1020790_1280.jpg" alt= "foto de un dalmata" />
                 <!-- <img src= "url" alt= "foto de un dalmata" /> -->
-
             </section>
-            <section>Tabla con la info</section>
-            
+            <section>
+                <div class="contenedorConMargen">
+                <div>Div 1</div>
+                <div>Div 2</div>
+                <div>Div 3</div>
+                </div>
+                <div class="contenedorDivsFlex">
+                    <div class="divtest" >Div1</div>
+                    <div class="divtest" >Div2</div>
+                    <div class="divtest" >Div3</div>
+                    <div class="divtest" >Div4</div>
+                    <div class="divtest" >Div5</div>
+                    <div class="divtest" >Div6</div>
+                    <div class="divtest" >Div7</div>
+                    <div class="divtest" >Div8</div>
+                    <div class="divtest" >Div9</div>
+                    <div class="divtest" >Div10</div>
+                    <div class="divtest" >Div11</div>
+                    <div class="divtest" >Div12</div>
+                </div>
+            </section>
         </main>
         <footer>este es el footer de contacto</footer>
     </body>
